SERVER-9333 clear ghostcache at reconfig time

Conflicts:
	src/mongo/db/repl/rs.cpp
	src/mongo/db/repl/rs.h
	src/mongo/db/repl/rs_sync.cpp