src/mongo/db/repl/rs_sync.cpp
@@ -173,6 +173,11 @@ namespace mongo {
         replLocalAuth();
     }
 
+    void GhostSync::clearCache() {
+        rwlock lk(_lock, true);
+        _ghostCache.clear();
+    }
+
     void GhostSync::associateSlave(const BSONObj& id, const int memberId) {
         const OID rid = id["_id"].OID();
         rwlock lk( _lock , true );
